storage/spider/spd_init_query.h
@@ -24,6 +24,9 @@ static LEX_STRING spider_init_queries[] = {
     "SET @@SQL_MODE = REGEXP_REPLACE(@@SQL_MODE, '(ORACLE|NO_ZERO_DATE)', '');"
   )},
   {C_STRING_WITH_LEN(
+    "SET tx_read_only = off;"
+  )},
+  {C_STRING_WITH_LEN(
     "create table if not exists mysql.spider_xa("
     "  format_id int not null default 0,"
     "  gtrid_length int not null default 0,"
