storage/spider/spd_table.cc
@@ -7332,7 +7332,7 @@ int spider_db_init(
         spider_param_table_crd_thread_count()),
       NullS))
   )
-    goto error_alloc_mon_mutxes;
+    goto error_alloc_table_sts_crd_threads;
 
   for (roop_count = 0;
     roop_count < (int) spider_param_table_sts_thread_count();
@@ -7407,9 +7407,11 @@ error_init_table_sts_threads:
   {
     spider_free_sts_threads(&spider_table_sts_threads[roop_count]);
   }
+error_alloc_table_sts_crd_threads:
   spider_free(NULL, spider_table_sts_threads, MYF(0));
-  roop_count = spider_param_udf_table_mon_mutex_count() - 1;
 #endif
+error_system_table_creation:
+  roop_count = spider_param_udf_table_mon_mutex_count() - 1;
 error_init_udf_table_mon_list_hash:
   for (; roop_count >= 0; roop_count--)
   {
@@ -7423,7 +7425,6 @@ error_init_udf_table_mon_list_hash:
 error_init_udf_table_mon_cond:
   for (; roop_count >= 0; roop_count--)
     pthread_cond_destroy(&spider_udf_table_mon_conds[roop_count]);
-error_system_table_creation:
   roop_count = spider_param_udf_table_mon_mutex_count() - 1;
 error_init_udf_table_mon_mutex:
   for (; roop_count >= 0; roop_count--)
